@startuml diagrama-mer
hide circle
skinparam defaultFontSize 11

skinparam entity {
  BackgroundColor #EBF8FF
  BorderColor #2B6CB0
  FontColor #1A365D
  FontStyle bold
}

skinparam diamond {
  BackgroundColor #FEFCBF
  BorderColor #975A16
  FontColor #744210
  FontSize 10
}

' ==================== ENTIDADES ====================

entity "USUARIO" as USUARIO {
  <u>id_usuario</u>
  nome
  email
  senha_hash
  papel
  ativo
}

entity "ALUNO" as ALUNO {
  <u>id_aluno</u>
  cpf
  rg
  endereco
  curso
  saldo_atual
}

entity "PROFESSOR" as PROFESSOR {
  <u>id_professor</u>
  cpf
  departamento
  saldo_atual
}

entity "EMPRESA_PARCEIRA" as EMPRESA {
  <u>id_empresa</u>
  nome_fantasia
}

entity "INSTITUICAO_ENSINO" as INSTITUICAO {
  <u>id_instituicao</u>
  nome
  sigla
}

entity "TRANSACAO_MOEDA" as TRANSACAO {
  <u>id_transacao</u>
  valor
  mensagem
  data_hora
}

entity "VANTAGEM" as VANTAGEM {
  <u>id_vantagem</u>
  descricao
  foto_url
  custo_moedas
  ativa
}

entity "RESGATE_VANTAGEM\n<<entidade associativa>>" as RESGATE {
  <u>id_resgate</u>
  codigo_unico
  data_hora
}

entity "CUPOM" as CUPOM {
  <u>id_cupom</u>
  codigo
  qr_code_base64
  data_geracao
  utilizado
}

' ==================== RELACIONAMENTOS ====================

diamond "É\nESPECIALIZADO\nEM\n(disjunta total)" as ISA

diamond "ESTUDA\nEM" as REL_ESTUDA
diamond "PERTENCE\nA" as REL_PERTENCE

diamond "ORIGINA" as REL_ORIGINA
diamond "RECEBE" as REL_RECEBE

diamond "OFERECE" as REL_OFERECE

diamond "RESGATA\n(N:N)" as REL_RESGATA_A
diamond "CONTÉM" as REL_CONTEM

diamond "GERA" as REL_GERA

' ==================== ASSOCIAÇÕES ====================

' --- Especialização total disjunta ---
USUARIO "1" -- ISA
ISA "1" -- ALUNO
ISA "1" -- PROFESSOR
ISA "1" -- EMPRESA

' --- Aluno (N) ESTUDA_EM (1) Instituicao ---
ALUNO "N" -- REL_ESTUDA
REL_ESTUDA -- "1" INSTITUICAO

' --- Professor (N) PERTENCE_A (1) Instituicao ---
PROFESSOR "N" -- REL_PERTENCE
REL_PERTENCE -- "1" INSTITUICAO

' --- Professor (1) ORIGINA (N) TransacaoMoeda ---
PROFESSOR "1" -- REL_ORIGINA
REL_ORIGINA -- "N" TRANSACAO

' --- Aluno (1) RECEBE (N) TransacaoMoeda ---
ALUNO "1" -- REL_RECEBE
REL_RECEBE -- "N" TRANSACAO

' --- Empresa (1) OFERECE (N) Vantagem ---
EMPRESA "1" -- REL_OFERECE
REL_OFERECE -- "N" VANTAGEM

' --- Aluno (N) RESGATA (N) Vantagem → entidade associativa ResgateVantagem ---
ALUNO "1" -- REL_RESGATA_A
REL_RESGATA_A -- "N" RESGATE
VANTAGEM "1" -- REL_CONTEM
REL_CONTEM -- "N" RESGATE

' --- ResgateVantagem (1) GERA (1) Cupom ---
RESGATE "1" -- REL_GERA
REL_GERA -- "1" CUPOM

@enduml
